Bug 373315 - playback cache doesn't get loaded in a good way
Summary: playback cache doesn't get loaded in a good way
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.0.2 Alpha
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-05 21:02 UTC by Bollebib
Modified: 2017-04-06 10:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bollebib 2016-12-05 21:02:59 UTC
it takes sometimes a long time and multiple 'playbacks' before all the frames are rendered and retained in cache for fluid playback

When that happens,playback is great. But before that it chugs and sputters anyway so that doesn't seem to useful.

there should perhaps be a rule that krita force-loads the frames before playback,instead of gradually like it does now.
Comment 1 Dmitry Kazakov 2016-12-12 10:06:56 UTC
Added

https://phabricator.kde.org/T4878
Comment 2 Dmitry Kazakov 2017-04-04 07:37:50 UTC
Git commit e964c2951f1e3bbf5becf48016d2bb209c599c17 by Dmitry Kazakov.
Committed on 04/04/2017 at 07:36.
Pushed by dkazakov into branch 'kazakov/svg-loading'.

Regenerate frames cache *before* starting the playback

Now when you click "Play" button, the cache is first regenerated,
and only after that, the playback starts.
Fixes T4878
CC:kimageshop@kde.org

M  +1    -0    libs/ui/CMakeLists.txt
M  +70   -0    libs/ui/KisAnimationCacheRegenerator.cpp
M  +10   -0    libs/ui/KisAnimationCacheRegenerator.h
M  +12   -0    libs/ui/canvas/kis_animation_player.cpp
A  +124  -0    libs/ui/dialogs/KisAnimationCacheUpdateProgressDialog.cpp     [License: GPL (v2+)]
C  +15   -20   libs/ui/dialogs/KisAnimationCacheUpdateProgressDialog.h [from: libs/ui/KisAnimationCacheRegenerator.h - 058% similarity]
M  +3    -20   libs/ui/kis_animation_cache_populator.cpp

https://commits.kde.org/krita/e964c2951f1e3bbf5becf48016d2bb209c599c17
Comment 3 Halla Rempt 2017-04-06 10:03:24 UTC
Git commit 6213b0e10e782056d13c90a7ad0e94f6a506616c by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 06/04/2017 at 10:02.
Pushed by rempt into branch 'krita/3.1'.

Regenerate frames cache *before* starting the playback

Now when you click "Play" button, the cache is first regenerated,
and only after that, the playback starts.
Fixes T4878
CC:kimageshop@kde.org

M  +1    -0    libs/ui/CMakeLists.txt
M  +70   -0    libs/ui/KisAnimationCacheRegenerator.cpp
M  +10   -0    libs/ui/KisAnimationCacheRegenerator.h
M  +12   -0    libs/ui/canvas/kis_animation_player.cpp
A  +124  -0    libs/ui/dialogs/KisAnimationCacheUpdateProgressDialog.cpp     [License: GPL (v2+)]
C  +15   -20   libs/ui/dialogs/KisAnimationCacheUpdateProgressDialog.h [from: libs/ui/KisAnimationCacheRegenerator.h - 058% similarity]
M  +3    -20   libs/ui/kis_animation_cache_populator.cpp

https://commits.kde.org/krita/6213b0e10e782056d13c90a7ad0e94f6a506616c