Regenerate frames cache *before* starting the playback

Now when you click "Play" button, the cache is first regenerated,
and only after that, the playback starts.

BUG:373315
Fixes T4878
CC:kimageshop@kde.org